# templates

./: .gitignore  README.md  meta.json  nvs_config.csv
.github/workflows/: deploy-templates.yml
common/audio-feed-html/: index.html
common/camera-feed-html/: index.html
common/llm-chat/: index.html  package-lock.json
common/realsense-camera-frontend/: README.md  package.json
common/shadcn-vite-frontend/: index.html  package.json
common/tailscale-bridge/: Dockerfile  entrypoint.sh  template.json  wendy.json
common/voice-ai-pipecat-frontend/: README.md  index.html
cpp/audio/: CMakeLists.txt  Dockerfile  index.html  main.cpp  template.json  wendy.json
cpp/camera-feed/: CMakeLists.txt  Dockerfile  index.html  main.cpp  template.json  wendy.json
cpp/camera-feed-yolo/: CMakeLists.txt  Dockerfile  Dockerfile.cpu  Dockerfile.cuda  Dockerfile.rocm  main.cpp  template.json
cpp/fullstack/: CMakeLists.txt  Dockerfile  main.cpp  template.json  wendy.json
cpp/realsense-camera/: CMakeLists.txt  Dockerfile  main.cpp  template.json  vite.config.ts  wendy.json
cpp/simple-api/: CMakeLists.txt  Dockerfile  main.cpp  template.json  wendy.json
node/audio/: Dockerfile  package.json  template.json
node/camera-feed/: Dockerfile  index.html  package.json  template.json  tsconfig.json
node/camera-feed-yolo/: Dockerfile  Dockerfile.cpu  Dockerfile.rocm  index.html  package.json  template.json  tsconfig.json
node/fullstack/: Dockerfile  package.json  template.json  tsconfig.json  wendy.json
node/simple-api/: Dockerfile  package.json  template.json  wendy.json
python/audio/: Dockerfile  app.py  index.html  template.json
python/camera-feed/: Dockerfile  app.py  template.json  wendy.json
python/camera-feed-vlm/: Dockerfile  README.md  app.py  index.html  requirements.txt  template.json  wendy.json
python/camera-feed-yolo/: Dockerfile  Dockerfile.cpu  Dockerfile.cuda  Dockerfile.rocm  app.py  index.html  requirements.txt  template.json  trt_yolo.py  wendy.json
python/camera-feed-yolo-fire/: Dockerfile  README.md  app.py  index.html  template.json  trt_yolo.py  wendy.json
python/camera-fleet/: README.md  template.json  wendy-fleet.json  wendy.json
python/fire_detection_yolo_and_vlm/: .dockerignore  .gitignore  Dockerfile  README.md  compose.yml  template.json  wendy.json
python/fire_detection_yolo_and_vlm/backend/: agent.py  ble_peripheral.py  camera.py  cameras.py  detector.py  discovery.py  llm.py  main.py  profiles.py  pyproject.toml  store.py  visual_search.py
python/fullstack/: Dockerfile  app.py  requirements.txt  template.json  wendy.json
python/go2-foxglove/: README.md  foxglove-layout.json  template.json  wendy.json
python/go2-initial-test/: README.md  template.json  wendy.json
python/go2-inspect/: README.md  template.json  wendy.json
python/go2-map-zones/: README.md  template.json  wendy.json
python/go2-mcp-control/: README.md  template.json  wendy.json
python/go2-quadruped/: compose.yml  template.json  template.schema.json
python/go2-quadruped/go2-brain/: .gitignore  Dockerfile  pyproject.toml  wendy.json
python/go2-quadruped/go2-brain/src/brain/: fusion.py  intent_publisher.py  main.py  mode_server.py  models.py  perception.py  safety.py  state_machine.py  trail.py
python/go2-quadruped/go2-brain/src/brain/dog/: base.py  mock.py  switchable.py  unitree.py
python/go2-quadruped/go2-brain/src/brain/static/: index.html
python/go2-quadruped/go2-brain/tests/: test_fusion.py  test_lidar_pipeline.py  test_safety.py  test_state_machine.py  test_trail.py
python/go2-quadruped/go2-mcp/: Dockerfile  mcp_call.sh  pyproject.toml  test_client.py  wendy.json
python/go2-quadruped/go2-mcp/src/go2_mcp/: config.py  server.py
python/go2-rc/: README.md  template.json  wendy.json
python/go2-rosbag/: README.md  template.json  wendy.json
python/hackathon-site/: README.md  template.json  wendy.json
python/isaac-sim-rl/: Dockerfile  README.md  template.json  template.schema.json  train.py  wendy.json
python/llm/: Dockerfile  README.md  docker-compose.yml  entrypoint.sh  template.json  template.schema.json  wendy.json
python/llm-chat/: .dockerignore  Dockerfile  README.md  requirements.txt  template.json  wendy.json
python/rc-car/: README.md  template.json  wendy.json
python/realsense-camera/: Dockerfile  index.html  package-lock.json  requirements.txt  template.json  vite.config.ts  wendy.json
python/rl-policy-runner/: README.md  template.json  wendy.json
python/simple-api/: Dockerfile  app.py  template.json  wendy.json
python/usb-camera/: Dockerfile  README.md  app.py  requirements.txt  template.json  wendy.json
python/voice-ai-pipecat/: .dockerignore  BUFFERING_INVESTIGATION.md  Dockerfile  README.md  entrypoint.sh  main.py  pipeline.py  requirements.txt  template.json  wendy.json
python/voice-assistant/: Dockerfile  compose.yml  pyproject.toml  template.json  template.schema.json  wendy.json
python/voice-assistant/voice-assistant/: __init__.py
python/voice-assistant/voice_assistant/: __init__.py
python/wifi-sensing/: .gitignore  Dockerfile  README.md  requirements-mcp.txt  requirements.txt  start.sh  template.json  wendy.json
rust/audio/: Dockerfile  index.html  template.json  wendy.json
rust/camera-feed/: Cargo.toml  Dockerfile  template.json  wendy.json
rust/camera-feed-yolo/: Cargo.toml  Dockerfile  Dockerfile.cpu  Dockerfile.cuda  Dockerfile.rocm  template.json
rust/camera-feed-yolo/src/: main.rs
rust/camera-feed/src/: main.rs
rust/fullstack/: Cargo.toml  Dockerfile  template.json  wendy.json
rust/fullstack/frontend/src/: App.tsx
rust/fullstack/frontend/src/components/: app-sidebar.tsx  section-cards.tsx
rust/fullstack/frontend/src/pages/: audio.tsx  camera.tsx  persistence.tsx  system.tsx
rust/fullstack/src/: main.rs
rust/realsense-camera/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  template.json  vite.config.ts  wendy.json
rust/realsense-camera/src/: main.rs
rust/simple-api/: Cargo.toml  Dockerfile  template.json  wendy.json
swift/audio/: Dockerfile  Package.swift  index.html  (+1 more)
(+431 files in other folders)
