[package]
name = "{{.APP_ID}}"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.8"
axum-extra = { version = "0.10", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
gstreamer = "0.23"
gstreamer-app = "0.23"
tower-http = { version = "0.6", features = ["fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
