[project]
name = "wendybox-alberta-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.3",
    "huggingface-hub>=1.8.0",
    "llama-cpp-python==0.3.20",
    "loro>=1.10.3",
    "opencv-python-headless>=4.13.0.92",
    "psutil>=5.9.0",
    "python-multipart>=0.0.9",
    "ultralytics>=8.4.33",
    "uvicorn[standard]>=0.42.0",
    "zeroconf>=0.148.0",
]
