[project]
name = "go2-mcp"
version = "0.1.0"
description = "MCP server exposing the Go2 follow-me stack (go2-motion + go2-brain) as tools."
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27",
]

[project.scripts]
go2-mcp = "go2_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/go2_mcp"]
